rollout/bets/templates/bets-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bets-dr
spec:
  host: bets
  subsets:
    - name: v1
      labels:
        version: v1
