rollout/bets/templates/bets-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bets-vs
spec:
  hosts:
    - "*"
  gateways:
    - bets-gateway
  http:
    - match:
        - uri:
            prefix: /api/bets
      name: primary
      route:
        - destination:
            host: bets-stable
            port:
              number: 9999
          weight: 100
        - destination:
            host: bets-canary
            port:
              number: 9999
            weight: 0
